# dataset-inspector

./: .gitignore  AGENTS.md  LICENSE  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  version.sh  vite.config.ts
.github/workflows/: build-tauri.yml  tauri-build-macos.yml  tauri-build-ubuntu.yml  tauri-build-windows.yml
app/: globals.css  layout.tsx  page.tsx
components/: providers.tsx  update-banner.tsx
components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  scroll-area.tsx
docs/: development.md  huggingface.md  mosaicml.md  webdataset.md
lib/: tauri-api.ts
src/: hero.ts  main.tsx  router.tsx
src-tauri/: Cargo.toml  build.rs  tauri.ci.build.conf.json  tauri.ci.release.conf.json  tauri.conf.json  tauri.plugins.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/App.icon/: icon.json
src-tauri/src/: app_error.rs  audio.rs  huggingface.rs  ipc_types.rs  litdata.rs  main.rs  mosaicml.rs  open_with.rs  webdataset.rs  zenodo.rs
src/components/: app-shell.tsx  update-banner.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  scroll-area.tsx  skeleton.tsx
src/lib/: tauri-api.ts
src/routes/: inspector.tsx
src/styles/: app.css
store/: viewer.ts
