[package]
name = "dataset-inspector"
version = "1.3.0"
description = "Tauri + Next.js Dataset Inspector"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2.9.3", features = ["wry", "protocol-asset"] }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-process = "2.3.1"
tauri-plugin-store = "2.4.1"
tauri-plugin-updater = "2.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
open = "5"
infer = "0.19"
hex = "0.4"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
url = "2"
zstd = { version = "0.13", default-features = false, features = ["experimental", "thin"] }
hound = "3"
tar = "0.4"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
